--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -51,18 +51,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-<script>
-    const emailInput = document.getElementById("email")
-    const passwordInput = document.getElementById("password")
-    const emailError = document.getElementById("emailErr")
-    const passwordError = document.getElementById("passwordErr")
-
-    emailInput.addEventListener("keyup", () => {
-        emailError.style.display = "none"
-    })
-    passwordInput.addEventListener("keyup", () => {
-        passwordError.style.display = "none"
-    })
-</script>
+<script th:src="@{/js/add-user.js}"></script>
 </body>
 </html>
