--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -64,17 +64,9 @@
        th:href="@{/user}">Back to home</a>
 </div>
 
+<script th:src="@{/js/update-user.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-<script>
-    const passwordVal = document.getElementById("password")
-    const passwordError = document.getElementById("passwordErr")
-    passwordVal.addEventListener("keyup", function () {
-        passwordError.style.display = "none"
-    })
-
-
-</script>
 </body>
 </html>
